support for all new operations of the OCL 2.2 SL